<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/eventBg"
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:contentDescription="@string/eventTitle"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        />

    <LinearLayout
        android:layout_height="275dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="15dp"
        android:text="@string/eventTitle"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLargeBlack"
        />


    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/eventDesc"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/eventDate"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/eventQABtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="13sp"
            android:text="@string/eventQABtn"
            />

        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/eventRegisterBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/eventRegisterBtn"
            android:textSize="13sp"
            />
    </LinearLayout>
</LinearLayout>