<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateGroup">

    <TextView
        android:id="@+id/groupCreation"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="655dp"
        android:text="@string/new_group_meetup"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="578dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groupCreation"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/groupName"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="578dp"
        android:text="@string/group_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupCreation"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/groupNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="515dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/groupNameInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nextMeetup"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="464dp"
        android:text="@string/group_next_meetup"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupNameInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nextMeetupInput"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="396dp"
        android:ems="10"
        android:hint="Nov 22, 2022"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextMeetup"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/repeat"
        android:layout_width="71dp"
        android:layout_height="39dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="348dp"
        android:text="@string/group_repeat"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextMeetupInput"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="281dp"
        android:layout_height="99dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="222dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat"
        app:layout_constraintVertical_bias="0.4">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_weekly_rb" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_monthly_rb" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_never_rb" />
    </RadioGroup>

    <TextView
        android:id="@+id/groupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="183dp"
        android:text="@string/groupDesc"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/groupDescriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/groupDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDescription"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="45dp"
        android:text="@string/createGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDescriptionInput" />


</androidx.constraintlayout.widget.ConstraintLayout>

