<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.groups.GroupDescription">


    <ImageView
        android:id="@+id/groupImage"
        android:layout_width="174dp"
        android:layout_height="167dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="435dp"
        android:text="@string/participants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/groupdesc"
        android:layout_width="116dp"
        android:layout_height="22dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="392dp"
        android:text="@string/groupDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="209dp"
        android:text="@string/chat_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupdesc" />

    <Button
        android:id="@+id/announcements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="211dp"
        android:text="@string/announcements_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chat"
        app:layout_constraintTop_toBottomOf="@+id/groupImage" />

    <Button
        android:id="@+id/editGroup"
        android:layout_width="256dp"
        android:layout_height="59dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="131dp"
        android:text="@string/edit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>