<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.profile.AccountDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/acc_details"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- reference https://github.com/material-components/material-components-android/blob/master/docs/components/TextField.md -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiAccountsFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acc_details_fname" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiAccountsLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acc_details_lname" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"
                        android:textSize="18sp" />


                    <DatePicker
                        android:id="@+id/datePickerAccountDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Social: Age preference"-->
<!--                        android:textSize="18sp" />-->

<!--                    <com.google.android.material.slider.RangeSlider-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:valueFrom="18"-->
<!--                        android:valueTo="40"-->
<!--                        app:values="@array/age_values" />-->

<!--                </LinearLayout>-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccountDetailsResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/reset_password" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAccountDetailsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/acc_details_save"
        android:src="@drawable/ic_baseline_save_24" />

</RelativeLayout>
